Bug 1701510: Zero out the 'body' margin for all ImageDocuments (including iframes and printed images). r=emilio
This makes us match Blink and WebKit on how to render an iframe whose src
attribute is an image URL.  They seem to have always used 0 margin in this
case, and this seems preferable from an author's perspective (since the
standard HTML-body margin feels kind of arbitrary, when viewing an image).

Note that this change does also mean that images will be slightly closer to the
upper-left of the page, if they're viewed directly and then printed.  This
shouldn't cause them to be clipped or cause other issues; they'll still be
offset from the page edge by the printed-page margins, as well as any
unprintable areas that we get from the printer.

Differential Revision: https://phabricator.services.mozilla.com/D110294

UltraBlame original commit: 5c46535ee223f48b142b817692dbc450a3ac0fa6

--- a/layout/style/ImageDocument.css
+++ b/layout/style/ImageDocument.css
@@ -116,6 +116,49 @@ frames
 .
 *
 /
+body
+{
+/
+*
+To
+give
+the
+image
+access
+to
+our
+document
+'
+s
+full
+viewport
+we
+need
+to
+override
+the
+margin
+that
+the
+html
+.
+css
+UA
+stylesheet
+would
+otherwise
+apply
+to
+our
+body
+.
+*
+/
+margin
+:
+0
+;
+}
 media
 not
 print
