--- a/layout/style/TopLevelImageDocument.css
+++ b/layout/style/TopLevelImageDocument.css
@@ -125,13 +125,6 @@ media
 not
 print
 {
-body
-{
-margin
-:
-0
-;
-}
 img
 {
 text
